--- a/index.html
+++ b/index.html
@@ -15,10 +15,24 @@
     />
   </head>
   <body>
-    <header>
-      <div class="container even-columns">
-        <h2>Lado A</h2>
+    
+    <div class="flex gap-1">
+      <a href="#" class="btn btn-sm">Label</a>
+      <span href="#" class="btn btn-md">Label</span>
+      <button href="#" class="btn btn-lg primary">Label</a>
       </div>
-    </header>
+
+      <div class="flex gap-1"></div>
+      <a
+      aria-label="Label"
+       href="#" class="btn btn-sm"></a>
+      <span 
+      aria-label="Label"
+      href="#" class="btn btn-md"></span>
+      <button 
+      aria-label="Label"
+      href="#" class="btn btn-lg primary"></a>
+      </div>
+
   </body>
 </html>
