--- a/index.html
+++ b/index.html
@@ -15,24 +15,11 @@
     />
   </head>
   <body>
-    
     <div class="flex gap-1">
-      <a href="#" class="btn btn-sm">Label</a>
-      <span href="#" class="btn btn-md">Label</span>
-      <button href="#" class="btn btn-lg primary">Label</a>
-      </div>
-
-      <div class="flex gap-1"></div>
-      <a
-      aria-label="Label"
-       href="#" class="btn btn-sm"></a>
-      <span 
-      aria-label="Label"
-      href="#" class="btn btn-md"></span>
-      <button 
-      aria-label="Label"
-      href="#" class="btn btn-lg primary"></a>
-      </div>
-
+      <a href="" class="social" aria-label="tiktok"></a>
+      <a href="" class="social" aria-label="instagram"></a>
+      <a href="" class="social" aria-label="twitter"></a>
+      <a href="" class="social" aria-label="discord"></a>
+    </div>
   </body>
 </html>
