--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <body>
     <header>
       <div class="container py-base">
-        <nav class="flex items-center gap-1.5rem">
+        <nav class="flex items-center gap-1.5">
           <a href="#">
-            <img src="./assets/zingen.svg" alt="Logo Zingen">
+            <img src="./assets/zingen.svg" alt="Logo Zingen" />
           </a>
 
           <a href="#about" class="desktop-only">Conheça o app</a>
@@ -28,13 +28,12 @@
 
           <a href="#download" class="btn btn-sm">Baixar Agora</a>
         </nav>
-
       </div>
     </header>
 
     <section id="hero">
       <div class="container py-xl">
-        <img src="./assets/music-bars.svg" alt="">
+        <img src="./assets/music-bars.svg" alt="" />
         <h1>Quem canta seus males espanta</h1>
         <p>Cantar nunca foi tão fácil</p>
 
@@ -42,16 +41,13 @@
           <a href="#price" aria-label="Ver planos" class="btn btn-md"></a>
           <a href="#download" class="btn btn-md">Baixar agora</a>
         </div>
-
       </div>
     </section>
 
     <section id="smartphones-img">
       <div class="container">
-        <img src="./assets/smartphones.png" alt="">
+        <img src="./assets/smartphones.png" alt="" />
       </div>
-
-
     </section>
 
     <section id="about">
@@ -61,10 +57,74 @@
             <strong>Conheça o app</strong>
             <h2>O aplicativo perfeito para aprender a cantar</h2>
           </header>
-          <p>Nosso algoritmo de Inteligência Artificial permite remover a voz original e manter as melodias das músicas. Dessa forma, temos o maior repertório musical para Karaokê! Além disso, ao cantar, sua voz e afinação é comparada pelo algoritmo permitindo uma avaliação precisa da sua performance te ajudando a melhorar seu canto. </p>
+          <p>
+            Nosso algoritmo de Inteligência Artificial permite remover a voz
+            original e manter as melodias das músicas. Dessa forma, temos o
+            maior repertório musical para Karaokê! Além disso, ao cantar, sua
+            voz e afinação é comparada pelo algoritmo permitindo uma avaliação
+            precisa da sua performance te ajudando a melhorar seu canto.
+          </p>
         </div>
         <div>
-          <img class="desktop-only" src="./assets/smartphones.png" alt="">
+          <img class="desktop-only" src="./assets/smartphones.png" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section id="features">
+      <div class="cards container py-xl grid gap-1.5">
+        <div class="card py-base px-lg">
+          <img src="./assets/MagicWand.svg" alt="" />
+          <h3>A maior biblioteca de músicas de Karaokê!</h3>
+          <p>
+            Nossa IA remove a voz de qualquer música e a deixa pronta pra
+            cantar, num passe de mágica!
+          </p>
+        </div>
+
+        <div class="card py-base px-lg">
+          <div>
+            <img src="./assets/GameController.svg" alt="" />
+            <h3>Experiência gamificada</h3>
+            <p>
+              Sua performance é pontuada de acordo com nosso algoritmo ultra
+              preciso. Desafie-se, ganhe reconhecimento e comemore sua evolução!
+            </p>
+          </div>
+          <img class="desktop-only" src="./assets/Tela 2.png" alt="" />
+        </div>
+
+        <div class="card py-base px-lg">
+          <img src="./assets/MicrophoneStage.svg" alt="" />
+          <h3>Grave suas performances</h3>
+          <p>
+            Seja para compartilhar com os amigos ou para acompanhar sua
+            evolução, nosso recurso de gravação de áudio e vídeo permite que
+            você aproveite a experiência ao máximo!
+          </p>
+        </div>
+
+        <div class="card py-base px-lg">
+          <div>
+            <img src="./assets/UsersThree.svg" alt="" />
+            <h3>Compartilhe com a comunidade</h3>
+            <p>
+              Compartilhe suas gravações com a comunidade, interaja e explore a
+              performance vocal de outras pessoas no seu feed!
+            </p>
+          </div>
+          <img class="desktop-only" src="./assets/Tela 1.png" alt="" />
+        </div>
+
+        <div class="card py-base px-lg">
+          <div>
+            <img src="./assets/MusicNotes.svg" alt="" />
+            <h3>Letras em tempo-real</h3>
+            <p>
+              Nunca perca o ritmo com as letras das músicas sincronizadas e exibidas em tempo real. Você também pode ativar a voz original da música para ajudar.
+            </p>
+          </div>
+          <img class="desktop-only" src="./assets/Tela 3.png" alt="" />
         </div>
       </div>
     </section>
