--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
 
             <div class="buttons flex gap-1">
               <a href="#">
-                <img src="./assets/app-store.svg" alt="Baixar da Apple Store">
+                <img src="./assets/app-store.svg" alt="Baixar da Apple Store" />
               </a>
               <a href="#">
-                <img src="./assets/play-store.svg" alt="Baixar da Play Store">
+                <img src="./assets/play-store.svg" alt="Baixar da Play Store" />
               </a>
             </div>
           </div>
@@ -219,5 +219,69 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      <div class="container py-xl grid">
+        <section class="grid top">
+        <img src="./assets/zingen.svg" alt="" />
+
+        <nav class="even-columns">
+          <ul role="list" class="grid gap-1.5">
+            <li class="title">Produto</li>
+            <li>
+              <a href="#features">Funcionalidades</a>
+            </li>
+
+            <li>
+              <a href="#price">Planos e preços</a>
+            </li>
+
+            <li>
+              <a href="#download">Download</a>
+            </li>
+          </ul>
+
+          <ul role="list" class="grid gap-1.5">
+            <li class="title">Empresa</li>
+            <li>
+              <a href="#about">Sobre nós</a>
+            </li>
+
+            <li>
+              <a href="#">Trabalhe conosco</a>
+            </li>
+
+            <li>
+              <a href="#">Blog</a>
+            </li>
+          </ul>
+
+          <ul role="list" class="grid gap-1.5">
+            <li class="title">Legal</li>
+            <li>
+              <a href="#">Termos de uso</a>
+            </li>
+
+            <li>
+              <a href="#">Política de privacidade</a>
+            </li>
+
+          </ul>
+        </nav>
+        </section>
+
+        <section class="bottom flex gap-1.5">
+          <div class="flex gap-1.5">
+            <a href="#" class="social" aria-label="tiktok"></a>
+            <a href="#" class="social" aria-label="instagram"></a>
+            <a href="#" class="social" aria-label="twitter"></a>
+            <a href="#" class="social" aria-label="discord"></a>
+          </div>
+            <span class="copy">
+              ©2024 Zingen Technologies, Inc.
+           </span>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
